--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,14 @@
 .row div {
-  background-color: grey;
+  background-color: gray;
   border-style: solid;
   border-color: white;
 }
 
 .nav.nav-sidebar li a {
   color: white;
+}
+
+.img_size{
+  width: 100%;
+  height: 100%;
 }
